grammar.txt
PROGRAM -> STATEMENT* EOF

STATEMENT -> EXPRSTMT | LETDECL | PRINTSTMT | IFSTMT | BLOCK
LETDECL -> "let" IDENTIFIER ( "=" EXPRESSION )? ";"
BLOCK -> "{" EXPRESSION "}"
PRINTSTMT -> "print(" EXPRESSION ");"
IFSTMT -> "if" "(" EXPRESSION ")" STATEMENT ( "else" STATEMENT )?
EXPRSTMT -> EXPRESSION ";"


EXPRESSION -> ASSIGNMENT
ASSIGNMENT -> IDENTIFIER "=" ASSIGNMENT | TERNARY 
TERNARY -> LOGICALOR ( "?" EXPRESSION  ":" TERNARY )?
LOGICALOR -> LOGICALAND ( "or" LOGICALAND )*
LOGICALAND -> EQUALITY ( "and" EQUALITY )*
EQUALITY -> COMPARISON ( "==" | "!=" COMPARISON )*
COMPARISON -> TERM ( "<" | ">" " "<=" | ">=" TERM )*
TERM -> FACTOR ( ( "+" | "-" ) FACTOR )*
FACTOR -> PRIMARY ( ( "/" | "*" ) PRIMARY )*
UNARY -> ( "!" | "-" ) PRIMARY
PRIMARY -> STRING | NUMBER | "true" | "false" | "null" | IDENTIFIER | "(" EXPRESSION ")"
